<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="@color/colorPrimaryLight"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textFrontCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                style="@style/PrimaryText" />

            <View
                android:id="@+id/delimeter"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:alpha="0.88"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textBackCardView"
                android:layout_margin="25dp"
                style="@style/PrimaryText"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="turn"
        android:layout_gravity="center"
        android:id="@+id/turn_card_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.2"
        android:layout_margin="10dp">

        <ImageButton
            android:id="@+id/to_know_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done" />

        <ImageButton
            android:id="@+id/to_repeat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_cancel"/>
    </LinearLayout>


</LinearLayout>


