...
        Google+: <a href="https://plus.google.com/communities/104603840044649051798">https://plus.google.com/communities/104603840044649051798</a><br/>
        Twitter: <a href="https://twitter.com/dasdelern">https://twitter.com/dasdelern</a>
    </body>
</html>]]></string>
    <string name="invite_user_sharing_deck_message">This user hasn\'t installed Delern yet. Do you want to sent an invite?</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="invite">Invite</string>
    <string name="deck_menu_description">Menu for operations with decks and cards</string>
    <string name="flip_the_card_message">Flip the card</string>
    <string name="number_of_cards">Number of cards: %d</string>
    <string name="card_watched_text">Watched: %d</string>

    <!-- Deck menu -->
    <string name="deck_settings_menu">Settings</string>
    <string name="edit_cards_deck_menu">Edit cards</string>
    <string name="deck_share_menu">Share</string>

    <!-- Deck Sharing -->
    <string name="sharing_imageview_description">Sharing options</string>
    <string name="share_people_textview">People</string>
    <string name="can_edit_text">Can Edit</string>
...
