<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.dasfoo.delern.card.EditCardListActivity">

    <include layout="@layout/content_edit_card_list" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/f_add_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />

    <include layout="@layout/toolbar"/>

</android.support.design.widget.CoordinatorLayout>
